--- a/mtf_book-0803-Integrated.ipynb
+++ b/mtf_book-0803-Integrated.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -388,9 +388,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lucas\\repos\\mtf\\libmtf.py:139: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  esf = [barray[1, i + start]/barray[0, i + start] for i in range(nn)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Beam splitter Ref Stats Fine Fine\n",
     "t_focus_d_bs, t_focus_h_bs, t_focus_v_bs = do_thru_focus(beamsplitter_scan_140ma_1000us)   "
@@ -398,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -417,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d288f43c50>"
+       "<matplotlib.legend.Legend at 0x16e0113a350>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -454,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -509,16 +518,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d288807ed0>"
+       "<matplotlib.legend.Legend at 0x16e01224b90>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -546,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -601,16 +610,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d288724e10>"
+       "<matplotlib.legend.Legend at 0x16d86fd1090>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -638,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -693,16 +702,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d288e20910>"
+       "<matplotlib.legend.Legend at 0x16e01514550>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -730,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -784,16 +793,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d288647d90>"
+       "<matplotlib.legend.Legend at 0x16e01630050>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -821,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -876,16 +885,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d2880bf9d0>"
+       "<matplotlib.legend.Legend at 0x16e014a9a90>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -913,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -968,16 +977,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d28c430410>"
+       "<matplotlib.legend.Legend at 0x16e01950910>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1005,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1060,16 +1069,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d28c4d4f50>"
+       "<matplotlib.legend.Legend at 0x16e01a31590>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1097,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1152,16 +1161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d28c309a90>"
+       "<matplotlib.legend.Legend at 0x16e019f1e50>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1189,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1245,16 +1254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d28c789d10>"
+       "<matplotlib.legend.Legend at 0x16e01dadf90>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1282,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1338,16 +1347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d28c885950>"
+       "<matplotlib.legend.Legend at 0x16e01e8dbd0>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
