--- a/mtf_book.ipynb
+++ b/mtf_book.ipynb
@@ -607,11 +607,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# This is the topic about MTF\n",
+    "hello, how are you!"
+   ]
   },
   {
    "cell_type": "code",
@@ -637,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
